--- a/实验报告.md
+++ b/实验报告.md
@@ -374,6 +374,8 @@ def add(self, net):
     return self
 ```
 
+由于`sigmoid`激活函数的实现较为简单，所以在每层（除了`Output`层）各实现了激活层。
+
 ### 训练过程
 
 在我们实验的过程中，选取迭代次数为20、初始学习率为0.5，每批从训练集中选取约6000个数据进行训练。
